tests/fsharp/typecheck/sigs/neg108.bsl

neg108.fs(4,19,4,23): typecheck error FS0001: This expression was expected to have type
    'Test'    
but here has type
    'Unit -> Test'    
